--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
   <style>
     .lil-gui {
-      --width: 300px;
-      --name-width: 120px;
+      width: 300px;
+      name-width: 120px;
       font-size: 15px;
-      --padding: 10px;
-      --background-color: rgba(20, 20, 20, 0.95);
-      --widget-color: #08f;
-      --text-color: #eee;
+      padding: 10px;
+      background-color: rgba(0, 0, 0, 0.308);
+      widget-color: #08f;
+      text-color: #eee;
       border-radius: 10px;
     }
   </style>
