--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
     const controls = new OrbitControls(camera, renderer.domElement);
     controls.target.set(0, 4, -5);
     controls.enableDamping = true;
+    controls.minDistance = 5;
+    controls.maxDistance = 30;
+    controls.minAzimuthAngle = -Math.PI / 12;
+    controls.maxAzimuthAngle = Math.PI / 2;
+    controls.minPolarAngle = Math.PI / 2.5;
+    controls.maxPolarAngle = Math.PI / 1.75;
     controls.update();
 
     // Lighting
