--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
     const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
     camera.position.set(6, 4, 10);
 
+    const mainCamera = camera;
+    const altCamera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+    altCamera.position.set(2, 6, -5); // Adjust for your scene
+
     // Alternate camera (top view example)
     const altCamera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
     altCamera.position.set(0, 15, 0);
