--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@
       hotspotMaterial
     );
 
+    hotspot.position.set(2, 1, -2); // Adjust to wherever you want the hotspot
+    scene.add(hotspot);
+
 
     const raycaster = new THREE.Raycaster();
     const mouse = new THREE.Vector2();
