--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     document.getElementById("resetViewBtn").addEventListener("click", () => {
       usingAltCamera = false;
       gsap.to(camera.position, {
-        duration: 1.5,
+        duration: .25,
         x: 6, y: 4, z: 10,
         ease: "power2.inOut"
       });
