--- a/index.html
+++ b/index.html
@@ -68,10 +68,19 @@
     const ambient = new THREE.HemisphereLight(0xffffff, 0x444444, 0.8);
     scene.add(ambient);
 
-    const light = new THREE.DirectionalLight(0xffffff, 2);
-    light.position.set(5, 10, 7.5);
-    light.castShadow = true;
-    scene.add(light);
+    const directionalLight = new THREE.DirectionalLight(0xffffff, 2.5);
+    directionalLight.position.set(5, 10, 7.5);
+    directionalLight.castShadow = true;
+    directionalLight.shadow.mapSize.set(1028, 1028);
+    directionalLight.shadow.bias = -0.0005;
+    directionalLight.shadow.normalBias = 0.005;
+    directionalLight.shadow.camera.near = 0.5;
+    directionalLight.shadow.camera.far = 50;
+    directionalLight.shadow.camera.left = -10;
+    directionalLight.shadow.camera.right = 10;
+    directionalLight.shadow.camera.top = 10;
+    directionalLight.shadow.camera.bottom = -10;
+    scene.add(directionalLight);
 
     const fillLight = new THREE.DirectionalLight(0xffffff, 1);
     fillLight.position.set(-5, 10, 7.5);
