--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
         target: new THREE.Vector3(0, 4, -5),
       },
       alt: {
-        position: new THREE.Vector3(6, 7, 20),
+        position: new THREE.Vector3(6, 4, 30),
         target: new THREE.Vector3(0, 4, -5),
       }
+      <console class="log"></console>
     };
 
     let usingAltCamera = false;
