--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         position: new THREE.Vector3(6, 4, 30),
         target: new THREE.Vector3(0, 4, -5),
       }
-      <console class="log"></console>
+      console.log
     };
 
     let usingAltCamera = false;
